[project]
name = "bro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "browser-use>=0.9.6",
    "openai>=1.12.0",
    "openai-agents>=0.1.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]
